sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:14: error: value !=- is not a member of Int
      while((l!=-1) && getCouleur(l)!=BLEU){
              ^DutchFlagAlgo:20: error: value !=- is not a member of Int
        while((l!=-1) && getCouleur(l)!=ROUGE){
                ^